--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,7 +2,7 @@
 
 <p><%= @article.body %></p>
 Our blog has <%= Comment.public_count("archived") %> comments and counting!
-
+ <%= Comment.hoge %>
 <ul>
   <li><%= link_to "Edit", edit_article_path(@article) %></li>
   <li><%= link_to "Destroy", article_path(@article),
